--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|start"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="60dp"
         android:src="@android:drawable/ic_media_play"
         android:paddingTop="300dp" />
 
